update pins and notes

--- a/docs/notes.org
+++ b/docs/notes.org
@@ -26,3 +26,9 @@ in c++ oop with platformio because we need to endable/disdable modules
 we going to divide the proyects in 2 parts lamp and acuarium controler with sensors
 
 
+** aplificador de señal 
+
+lm386 para parlantes
+
+lm358
+
